# chatbot-appl

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt  test_embedding.py
app/: __init__.py  api.py  chatbot.py  database.py  logger.py  middleware.py  models.py  monitoring.py  types.py
scripts/: setup.sh
templates/: index.html
tests/: test_basic.py
