[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "production-chatbot"
version = "1.0.0"
description = "Production-ready chatbot application with LangChain-OpenAI and Qdrant"
authors = [{name = "Chatbot Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai==0.3.28",
    "langchain==0.3.72",
    "qdrant-client==1.8.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "jinja2==3.1.2",
    "aiofiles==23.2.1",
    "httpx==0.25.2",
    "tiktoken==0.5.2",
    "sentence-transformers==2.2.2",
    "torch>=1.13.0,<3.0.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "loguru==0.7.2",
    "redis==5.0.1",
    "celery==5.3.4",
    "prometheus-client==0.19.0",
    "structlog==23.2.0",
    "psutil==5.9.6",
    "langchain-community==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "torch.*",
    "qdrant_client.*",
    "prometheus_client.*",
    "langchain.*",
    "langchain_openai.*",
    "langchain_community.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]